--- a/src/main/resources/templates/head.html
+++ b/src/main/resources/templates/head.html
@@ -8,6 +8,10 @@
     <script th:src="@{js/jquery-1.10.2.min.js}" tppabs="http://tyslate.com/js/jquery-1.10.2.min.js" type="text/javascript"></script>
     <script th:src="@{js/jquery.kinMaxShow-1.1.min.js}" tppabs="http://tyslate.com/js/jquery.kinMaxShow-1.1.min.js" type="text/javascript"></script>
     <script th:src="@{js/jquery.kinMaxShow-1.1.src.js}" tppabs="http://tyslate.com/js/jquery.kinMaxShow-1.1.src.js" type="text/javascript"></script>
+
+    <link th:href="@{css/kf.css}" tppabs="http://tyslate.com/css/kf.css" rel="stylesheet" type="text/css" />
+    <script th:src="@{js/kf/lrtk.js}" tppabs="http://tyslate.com/js/kf/lrtk.js" type="text/javascript"></script>
+
     <script type="text/javascript">
         $(function(){
             $("#kinMaxShow").kinMaxShow();
@@ -30,7 +34,4 @@
             window.location.href="m/index.htm"/*tpa=http://tyslate.com/m/*/;//手机
     </script>
 </head>
-<body>
-
-</body>
 </html>
