--- a/src/main/resources/templates/list3.html
+++ b/src/main/resources/templates/list3.html
@@ -2,9 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:replace="head::head"></div>
 <body>
-<div class="header">
     <div th:replace="header::header"></div>
-</div>
 
 <div class="sectionB">
     <div class="main">
@@ -118,6 +116,8 @@
 </div>
 
     <div th:replace="footer::footer"></div>
+    <div th:replace="main_im::im"></div>
+
 
 <script>
 var _hmt = _hmt || [];
