--- a/src/main/resources/templates/list5.html
+++ b/src/main/resources/templates/list5.html
@@ -2,9 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:replace="head::head"></div>
 <body>
-<div class="header">
     <div th:replace="header::header"></div>
-</div>
 
 <div class="sectionB">
     <div class="main">
@@ -89,6 +87,7 @@
     <!-- end main-->
 </div>
     <div th:replace="footer::footer"></div>
+    <div th:replace="main_im::im"></div>
 <!-- 代码 结束 --><script>
 var _hmt = _hmt || [];
 (function() {
