--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -251,6 +251,7 @@
 <script src="../www.baidujx.com/libraries/hbHeadAd.js" tppabs="http://www.baidujx.com/libraries/hbHeadAd.js" type="text/javascript"></script>
 
 <div th:replace="footer::footer"></div>
+<div th:replace="main_im::im"></div>
 
 </body>
 </html>
