--- a/src/main/resources/templates/view2-1.html
+++ b/src/main/resources/templates/view2-1.html
@@ -2,9 +2,7 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:replace="head::head"></div>
 <body>
-<div class="header">
     <div th:replace="header::header"></div>
-</div>
 
 <div class="sectionB">
     <div class="main">
@@ -35,7 +33,8 @@
 </div>
 <!-- end sectionbg-->
 
-<div th:replace="footer::footer"></div>
+    <div th:replace="footer::footer"></div>
+    <div th:replace="main_im::im"></div>
 
 <script>
 var _hmt = _hmt || [];
