--- a/src/main/resources/templates/view5-30.html
+++ b/src/main/resources/templates/view5-30.html
@@ -2,38 +2,8 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <div th:replace="head::head"></div>
 <body>
-<head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf8"/><title>工程案例 - 九江天韵石材有限公司</title><meta name="keywords" content="九江天韵石材有限公司,天韵石材,青石板,蘑菇石" /><meta name="description" content="九江天韵石材有限公司是一家集生产、加工、销售为一体的石材厂家。公司主营：青石板、黄木纹、青石板、文化石、板岩、网帖、石材工艺品等石材产品。" /><link href="css/css.css" tppabs="http://tyslate.com/css/css.css" rel=stylesheet>
-    <script th:src="@{js/jquery.js}" tppabs="http://tyslate.com/js/jquery.js" type="text/javascript"></script>
-    <script th:src="@{js/ind.js}" tppabs="http://tyslate.com/js/ind.js" type="text/javascript"></script>
-    <script th:src="@{js/zoom.js}" tppabs="http://tyslate.com/js/zoom.js" type="text/javascript"></script>
-    <script th:src="@{js/jquery-1.10.2.min.js}" tppabs="http://tyslate.com/js/jquery-1.10.2.min.js" type="text/javascript"></script>
-    <script th:src="@{js/jquery.kinMaxShow-1.1.min.js}" tppabs="http://tyslate.com/js/jquery.kinMaxShow-1.1.min.js" type="text/javascript"></script>
-    <script th:src="@{js/jquery.kinMaxShow-1.1.src.js}" tppabs="http://tyslate.com/js/jquery.kinMaxShow-1.1.src.js" type="text/javascript"></script>
     <script src="http://bdimg.share.baidu.com/static/api/js/share.js" tppabs="http://bdimg.share.baidu.com/static/api/js/share.js" type="text/javascript"></script>
-    <script type="text/javascript">
-        $(function(){
-            $("#kinMaxShow").kinMaxShow();
-        });
-    </script>
-    <script type=text/javascript>
-        function IsPC()
-        {
-            var userAgentInfo = navigator.userAgent;
-            var Agents = new Array("Android", "iPhone", "SymbianOS", "Windows Phone", "iPad", "iPod");
-            var flag = true;
-            for (var v = 0; v < Agents.length; v++) {
-                if (userAgentInfo.indexOf(Agents[v]) > 0) { flag = false; break; }
-            }
-            return flag;
-        }
-
-        var juf=IsPC();
-        if(!juf)
-            window.location.href="m/index.htm"/*tpa=http://tyslate.com/m/*/;//手机
-    </script>
-</head>
-
+    <div th:replace="header::header"></div>
 <div class="sectionB">
     <div class="main">
         <div th:replace="left::left"></div>
@@ -101,10 +71,11 @@
     </div>
     <!-- end main-->
 </div>
-
 <!-- end sectionbg-->
     <div th:replace="footer::footer"></div>
-<!-- 代码 结束 --><script>
+    <div th:replace="main_im::im"></div>
+
+<script>
 var _hmt = _hmt || [];
 (function() {
 var hm = document.createElement("script");
