add application init

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -241,7 +241,7 @@
 <div class="English"> about  </div>
     </div><!-- end Ttitle-->
         <div class="companynr">
-<span class="name">九江天韵石材有限公司 </span><p style="text-indent: 2em;">九江天韵石材有限公司是一家集生产、加工、销售为一体的石材厂家。公司主营：青石板、黄木纹、文化石、板岩、网帖、石材工艺品等石材产品。公司有着一班高素质的管理人才和一批优质的生产工人，可根据客户需求生产各种不同规格的石材，有一套先进的生产设 备，能够保质保量按时完成生产任务。企业宗旨：诚信做人，老实做事；物美价廉，长期共存。热诚欢迎广大新老顾客前来参观，考察洽谈，采购 。期待着我们能以优质的服务的质量得到您的认可,并携手......</p></div><!-- end companynr -->
+<span class="name">九江英格石业有限公司 </span><p style="text-indent: 2em;">九江英格石业有限公司坐落在美丽的庐山脚下，是一家集生产、加工、销售为一体的石材企业。公司从九十年代开始做板岩生产，从纯人工开采到现在全机械化开采加工，专注做板岩石材三十年。工厂有一套先进的生产设备，可私人订制各种规格石材，能够保质保量按时完成生产任务，为广大客户提供一站式石材用料解决方案......</p></div><!-- end companynr -->
 
         <div class="Tmore1"><a href="view2-1.html" tppabs="http://tyslate.com/view2-1.html" target="_blank" title="查看更多">查看更多</a></div>
 
